chat-fix wrong font and created date message padding WTHZONE-1174

--- a/src/chat/shared/message/message-item.component.scss
+++ b/src/chat/shared/message/message-item.component.scss
@@ -1,3 +1,5 @@
+@import '../../../assets/styles/global';
+
 .photo-box-figure-in i {
   position: absolute;
   top: 50%;
@@ -12,5 +14,10 @@
 }
 
 .message-notification-padding {
-  padding: 0 20px 10px 20px
+  padding: 0 0 10px 0
+}
+
+.message-notification-content {
+  font-size: 12px;
+  color: $text-color-light;
 }
